--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ python:
   - "3.4"
   - "3.5"
 install: "pip install -r requirements.txt"
-script: " nosetests && flake8 . "
+before_script: "flake8 ."
+script: "nosetests"
